--- a/TP5/tp5.ipynb
+++ b/TP5/tp5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Croyance et possibilité pour l'expert 1\n",
+      "Croyance et possibilité pour l'expert 2\n",
       "bel_1(A) =  0.0\n",
       "pl_1(A) =  0.0\n",
       "Dis1(A) =  1.0\n",
@@ -265,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Croyance et possibilité pour l'expert 1\n",
+      "Croyance et possibilité pour l'expert 3\n",
       "bel_1(A) =  0.33\n",
       "pl_1(A) =  0.33\n",
       "Dis1(A) =  0.6699999999999999\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +318,134 @@
       "Dempster-Shafer Combinaison rule for m_1, m_2 and m_3 =  {}\n",
       "Dempster-Shafer Combinaison rule for m_2, m_1 and m_3 =  {}\n",
       "Dempster-Shafer Combinaison rule for m_3, m_1 and m_2 =  {{'T'}:0.5913978494623655; {'A'}:0.4086021505376344}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#combinaisons des masses par fusion de Dempster-Shafer\n",
+    "print(\"Dempster-Shafer Combinaison rule\")\n",
+    "print(\"Dempster-Shafer Combinaison rule for m_1 and m_2 = \", m1 & m2)\n",
+    "print(\"Dempster-Shafer Combinaison rule for m_2 and m_3 = \", m2 & m3)\n",
+    "print(\"Dempster-Shafer Combinaison rule for m_1 and m_3 = \", m1 & m3)\n",
+    "\n",
+    "print(\"Dempster-Shafer Combinaison rule for m_1, m_2 and m_3 = \", m1.combine_conjunctive(m2, m3))\n",
+    "print(\"Dempster-Shafer Combinaison rule for m_2, m_1 and m_3 = \", m2.combine_conjunctive(m1, m3))\n",
+    "print(\"Dempster-Shafer Combinaison rule for m_3, m_1 and m_2 = \", m3.combine_conjunctive(m1, m2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "each expert provides their opinion about the color of an object in an image. The Dempster-Shafer combination rule is then used to combine these opinions, and a decision is made based on the combined mass. Adjust the colors and their associated masses according to your specific computer vision problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expert 1\n",
+      "m_1 =  {{'r'}:0.6; {'g'}:0.3; {'b'}:0.1}\n",
+      "Expert 2\n",
+      "m_2 =  {{'g'}:0.5; {'b'}:0.3; {'r'}:0.2}\n",
+      "Expert 3\n",
+      "m_3 =  {{'r'}:0.4; {'b'}:0.4; {'g'}:0.2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Masses provided by three experts regarding the color of an object\n",
+    "print(\"Expert 1\")\n",
+    "m1 = MassFunction({'r': 0.6, 'g': 0.3, 'b': 0.1})\n",
+    "print(\"m_1 = \", m1)\n",
+    "\n",
+    "print(\"Expert 2\")\n",
+    "m2 = MassFunction({'r': 0.2, 'g': 0.5, 'b': 0.3})\n",
+    "print(\"m_2 = \", m2)\n",
+    "\n",
+    "print(\"Expert 3\")\n",
+    "m3 = MassFunction({'r': 0.4, 'g': 0.2, 'b': 0.4})\n",
+    "print(\"m_3 = \", m3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Croyance et possibilité pour Expert 1\n",
+      "bel_Expert 1(red) = 0.0\n",
+      "pl_Expert 1(red) = 0.0\n",
+      "DisExpert 1(red) = 1.0\n",
+      "bel_Expert 1(green) = 0.0\n",
+      "pl_Expert 1(green) = 0.0\n",
+      "DisExpert 1(green) = 1.0\n",
+      "bel_Expert 1(blue) = 0.0\n",
+      "pl_Expert 1(blue) = 0.0\n",
+      "DisExpert 1(blue) = 1.0\n",
+      "\n",
+      "Croyance et possibilité pour Expert 2\n",
+      "bel_Expert 2(red) = 0.0\n",
+      "pl_Expert 2(red) = 0.0\n",
+      "DisExpert 2(red) = 1.0\n",
+      "bel_Expert 2(green) = 0.0\n",
+      "pl_Expert 2(green) = 0.0\n",
+      "DisExpert 2(green) = 1.0\n",
+      "bel_Expert 2(blue) = 0.0\n",
+      "pl_Expert 2(blue) = 0.0\n",
+      "DisExpert 2(blue) = 1.0\n",
+      "\n",
+      "Croyance et possibilité pour Expert 3\n",
+      "bel_Expert 3(red) = 0.0\n",
+      "pl_Expert 3(red) = 0.0\n",
+      "DisExpert 3(red) = 1.0\n",
+      "bel_Expert 3(green) = 0.0\n",
+      "pl_Expert 3(green) = 0.0\n",
+      "DisExpert 3(green) = 1.0\n",
+      "bel_Expert 3(blue) = 0.0\n",
+      "pl_Expert 3(blue) = 0.0\n",
+      "DisExpert 3(blue) = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Belief, plausibility, and disbelief for each expert\n",
+    "colors = ['red', 'green', 'blue']\n",
+    "\n",
+    "for expert, m in zip(['Expert 1', 'Expert 2', 'Expert 3'], [m1, m2, m3]):\n",
+    "    print(f\"\\nCroyance et possibilité pour {expert}\")\n",
+    "    for c in colors:\n",
+    "        print(f\"bel_{expert}({c}) = {m.bel({c})}\")\n",
+    "        print(f\"pl_{expert}({c}) = {m.pl({c})}\")\n",
+    "        print(f\"Dis{expert}({c}) = {1 - m.pl({c})}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dempster-Shafer Combinaison rule\n",
+      "Dempster-Shafer Combinaison rule for m_1 and m_2 =  {{'g'}:0.5; {'r'}:0.4; {'b'}:0.1}\n",
+      "Dempster-Shafer Combinaison rule for m_2 and m_3 =  {{'b'}:0.3999999999999999; {'g'}:0.3333333333333333; {'r'}:0.26666666666666666}\n",
+      "Dempster-Shafer Combinaison rule for m_1 and m_3 =  {{'r'}:0.7058823529411765; {'g'}:0.17647058823529413; {'b'}:0.11764705882352945}\n",
+      "Dempster-Shafer Combinaison rule for m_1, m_2 and m_3 =  {{'g'}:0.5; {'r'}:0.4; {'b'}:0.1}\n",
+      "Dempster-Shafer Combinaison rule for m_2, m_1 and m_3 =  {{'g'}:0.5; {'r'}:0.4; {'b'}:0.1}\n",
+      "Dempster-Shafer Combinaison rule for m_3, m_1 and m_2 =  {{'r'}:0.7058823529411765; {'g'}:0.17647058823529413; {'b'}:0.11764705882352945}\n"
      ]
     }
    ],
